--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@automapper/classes": "^8.7.5",
+    "@automapper/core": "^8.7.5",
+    "@automapper/nestjs": "^8.7.5",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -36,6 +39,7 @@
     "typeorm": "^0.3.7"
   },
   "devDependencies": {
+    "@automapper/types": "^6.3.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
