--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -8,9 +8,9 @@ on:
 jobs:
   lint:
     uses: spuxx1701/ci/.github/workflows/npm_lint.yml@v1.0
-  docker_push:
+  docker_build_and_push:
     needs: lint
-    uses: spuxx1701/ci/.github/workflows/docker_push.yml@v1.0
+    uses: spuxx1701/ci/.github/workflows/docker_build_and_push.yml@v1.0
     with:
       username: spuxx
       repository: doleo-2-backend
@@ -18,8 +18,9 @@ jobs:
     secrets:
       token: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  docker_deploy:
+  finish:
     needs: docker_push
+    runs-on: ubuntu-latest
     steps:
       - id: log
         run: echo ${{ needs.docker_push.outputs.tags }}
