--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 AUTH_JWT_SECRET=***
+AUTH_COOKIE_NAME=doleo2
+AUTH_COOKIE_SECRET=***
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_DB=doleo2-dev
