no deployment with failed linting

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -10,6 +10,7 @@ jobs:
     uses: spuxx1701/ci/.github/workflows/npm_lint.yml@v1.1
 
   docker_deploy:
+    needs: lint
     uses: spuxx1701/ci/.github/workflows/docker_deploy.yml@v1.1
     with:
       username: spuxx
