--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,9 +1,9 @@
-name: develop
+name: integrate
 
 on:
   push:
     branches:
-      - develop
+      - integrate
 
 jobs:
   lint:
@@ -15,7 +15,7 @@ jobs:
     with:
       username: spuxx
       repository: doleo-2-backend
-      environment: test
+      environment: integrate
     secrets:
       token: ${{ secrets.DOCKERHUB_TOKEN }}
       ssh_host: ${{ secrets.SSH_HOST }}
