--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 AUTH_JWT_SECRET=***
 AUTH_COOKIE_NAME=doleo2
 AUTH_COOKIE_SECRET=***
+CORS_ALLOWED_ORIGINS=*
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_DB=doleo2-dev
