--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,15 @@
+APP_CLIENT_URL=https://wwww.doleo-2.de
+CORS_ALLOWED_ORIGINS=*
 AUTH_JWT_SECRET=***
 AUTH_COOKIE_NAME=doleo2
 AUTH_COOKIE_SECRET=***
-CORS_ALLOWED_ORIGINS=*
+MAIL_HOST=***
+MAIL_USER=***
+MAIL_PASSWORD=***
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_DB=doleo2-dev
 DATABASE_USER=doleo2-dev
 DATABASE_PASSWORD=***
 DATABASE_SYNCHRONIZE=false
+DEBUG=false
