add mariadb config

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,6 @@ DATABASE_PORT=3306
 DATABASE_DB=doleo2-dev
 DATABASE_USER=doleo2-dev
 DATABASE_PASSWORD=***
+MARIADB_ROOT_PASSWORD=***
 DATABASE_SYNCHRONIZE=false
 DEBUG=false
