docs: updated .env.example

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ MAIL_USER=***
 MAIL_PASSWORD=***
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
-DATABASE_DB=doleo2-dev
-DATABASE_USER=doleo2-dev
+DATABASE_DB=doleo-dev
+DATABASE_USER=doleo-dev
 DATABASE_PASSWORD=***
 DATABASE_SYNCHRONIZE=false
 DEBUG=false
