--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -18,7 +18,7 @@ jobs:
       - lint
     uses: spuxx1701/ci-cd/.github/workflows/release_image.yml@v2.1
     with:
-      dockerfile: Dockerfile.production
+      dockerfile: Dockerfile
       latest: true
     secrets:
       dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
